# uart-driver

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  README.md  arm-none-eabi.txt  meson.build  meson.options
BTL_uart_driver/uart_driver/: uart_driver Debug.launch  uart_driver.ioc
BTL_uart_driver/uart_driver/Core/Src/: main.c  stm32f4xx_hal_msp.c
BTL_uart_driver/uart_driver/Debug/: makefile  uart_driver.elf  uart_driver.list  uart_driver.map
BTL_uart_driver/uart_driver/Debug/Core/Src/: main.cyclo  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_hal_msp.su
BTL_uart_driver/uart_driver/Drivers/CMSIS/Include/: mpu_armv7.h
BTL_uart_driver/uart_driver/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_ll_rcc.h
BTL_uart_driver/uart_driver/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_tim.c  stm32f4xx_hal_tim_ex.c  stm32f4xx_hal_uart.c
app/: meson.build
app/src/: main.c
bsp/: .cproject  .mxproject  .project  hihi.ioc  hihi.launch  meson.build
bsp/Core/Src/: main.c
bsp/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal.h  stm32f4xx_hal_conf.h  stm32f4xx_hal_dma.h  stm32f4xx_hal_gpio.h  stm32f4xx_hal_uart.h  stm32f4xx_ll_exti.h
bsp/Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_dma.c  stm32f4xx_hal_exti.c  stm32f4xx_hal_gpio.c
drvs/: meson.build
drvs/inc/: uart_driver.h
drvs/src/: uart_driver.c
libs/: meson.build
subprojects/: unity.wrap
tests/: meson.build
tests/1_TestExampleCode/: ProductionCode.c  ProductionCode.h  TestExampleCode.c  TestExampleCode_Runner.c  meson.build
tools/: build.sh  flash.sh  init.sh  reinit.sh  setup.sh  sup_flash.sh  test.sh  wipe.sh
utils/: meson.build
